# malcontent-debian

./: .gitlab-ci.yml  NEWS  README.md  meson.build
.gitlab-ci/: debian-unstable.Dockerfile
accounts-service/: meson.build
debian/: changelog  control  gir1.2-malcontentui-1.install  libmalcontent-0-0.symbols  libmalcontent-ui-0-0.symbols  libmalcontent-ui-1-1.install  libmalcontent-ui-1-1.symbols  libmalcontent-ui-dev.install  malcontent-gui.install  malcontent.install  not-installed  rules  watch
debian/patches/: all_apps.patch  hide_unsupported_features.patch  no-more-subproject.patch  series
debian/upstream/: metadata
help/: LINGUAS
help/de/: de.po
help/hu/: hu.po
help/it/: it.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/tr/: tr.po
libmalcontent/: app-filter-private.h  app-filter.c  meson.build  session-limits-private.h
libmalcontent-ui/: meson.build  restrict-applications-dialog.c  restrict-applications-dialog.h  restrict-applications-dialog.ui  restrict-applications-selector.c  restrict-applications-selector.h  restrict-applications-selector.ui  restricts-switch.css  user-controls.c  user-controls.h  user-controls.ui
malcontent-client/: malcontent-client.py
malcontent-control/: application.c  carousel.c  carousel.css  carousel.h  carousel.ui  main.ui  meson.build  org.freedesktop.MalcontentControl.appdata.xml.in  user-image.c  user-image.h  user-selector.c  user-selector.ui
po/: LINGUAS  POTFILES.in  ca.po  cs.po  de.po  hi.po  hu.po  it.po  ka.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po  zh_TW.po
subprojects/: libadwaita.wrap  libhandy.wrap
